crates/aegis-tui/tests/snapshots/tui_snapshots__error_message.snap
---
source: crates/aegis-tui/tests/tui_snapshots.rs
expression: frame
---
"gemini-2.0-flash                                                                "
"You: Run the tests                                                              "
"                                                                                "
"Connection timed out: provider unreachable                                      "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"--------------------------------------------------------------------------------"
">                                                                               "
" INSERT   Enter send | Ctrl+O newline | Esc vim                                 "
