crates/aegis-tui/tests/snapshots/tui_snapshots__idle_fresh_app.snap
---
source: crates/aegis-tui/tests/tui_snapshots.rs
expression: frame
---
"gemini-2.0-flash                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"--------------------------------------------------------------------------------"
">                                                                               "
" INSERT   Enter send | Ctrl+O newline | Esc vim                                 "
