crates/aegis-tui/tests/snapshots/tui_snapshots__multi_turn_conversation.snap
---
source: crates/aegis-tui/tests/tui_snapshots.rs
expression: frame
---
"gemini-2.0-flash                                                                "
"| You: Read Cargo.toml                                                          "
"                                                                                "
"|   > read_file: Cargo.toml (2.1KB)                                             "
"                                                                                "
"| The workspace has 10 crates under the crates/ directory.                      "
"                                                                                "
"| You: Which crate handles the TUI?                                             "
"                                                                                "
"| The aegis-tui crate handles the terminal user interface.                      "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"────────────────────────────────────────────────────────────────────────────────"
">                                                                               "
" INSERT   Ctrl+O newline | Enter: send | Esc: normal mode                       "
