crates/aegis-tui/tests/snapshots/tui_snapshots__status_line_streaming.snap
---
source: crates/aegis-tui/tests/tui_snapshots.rs
assertion_line: 87
expression: frame
---
"llama3-il5 | Thinking.                                                          "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" > ─────────────────────────────────────────────────────────────────────────────"
"                                                                                "
"                                                                                "
