crates/aegis-tui/tests/snapshots/tui_snapshots__status_line_tool_executing.snap
---
source: crates/aegis-tui/tests/tui_snapshots.rs
expression: frame
---
"llama3-il5 | TOOL executing...                                                  "
"|   > read_file: src/main.rs                                                    "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"--------------------------------------------------------------------------------"
">                                                                               "
" INSERT   Enter send | Ctrl+O newline | Esc vim                                 "
