crates/aegis-tui/tests/snapshots/tui_snapshots__status_line_with_token_counts.snap
---
source: crates/aegis-tui/tests/tui_snapshots.rs
assertion_line: 110
expression: frame
---
"llama3-il5 | 1500in + 3200out                                                   "
"done                                                                            "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" > ─────────────────────────────────────────────────────────────────────────────"
"                                                                                "
"                                                                                "
