crates/aegis-tui/tests/snapshots/tui_snapshots__system_message.snap
---
source: crates/aegis-tui/tests/tui_snapshots.rs
assertion_line: 162
expression: frame
---
"gemini-2.0-flash                                                                "
"Commands: /clear /help /context /quit                                           "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" > ─────────────────────────────────────────────────────────────────────────────"
"                                                                                "
"                                                                                "
