crates/aegis-tui/tests/snapshots/tui_snapshots__with_assistant_response.snap
---
source: crates/aegis-tui/tests/tui_snapshots.rs
assertion_line: 52
expression: frame
---
"gemini-2.0-flash                                                                "
"You: What does main.rs do?                                                      "
"                                                                                "
"The main.rs file initializes the application, sets up the TUI, and starts the   "
"event loop.                                                                     "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" > ─────────────────────────────────────────────────────────────────────────────"
"                                                                                "
"                                                                                "
