crates/aegis-tui/tests/snapshots/tui_snapshots__with_streaming_buffer.snap
---
source: crates/aegis-tui/tests/tui_snapshots.rs
expression: frame
---
"gemini-2.0-flash | Thinking.                                                    "
"You: Summarize this file                                                        "
"                                                                                "
"The file contains several important functions that... ...                       "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" > ─────────────────────────────────────────────────────────────────────────────"
"                                                                                "
"                                                                                "
