crates/aegis-tui/tests/snapshots/tui_snapshots__with_user_message.snap
---
source: crates/aegis-tui/tests/tui_snapshots.rs
expression: frame
---
"gemini-2.0-flash                                                                "
"You: Explain the architecture of this codebase                                  "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"--------------------------------------------------------------------------------"
">                                                                               "
" INSERT   Enter send | Ctrl+O newline | Esc vim                                 "
